# tinywl

./: .gitignore  Makefile  README.md  cursor.c  cursor.h  decoration.c  decoration.h  meson.build  my-protocol.xml  note  process.c  process.h  shell.c  shell.h  tinywl.c  tinywl.h
